samples/_failures_safe/1761177925_014faf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32231498.c: In function ‘main’:
./samples/SAFE/__tmp_32231498.c:146:29: error: expected ‘)’ at end of input
  146 |         print_matrix(&result
      |                     ~       ^
      |                             )
./samples/SAFE/__tmp_32231498.c:146:9: error: expected declaration or statement at end of input
  146 |         print_matrix(&result
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_32231498.c:146:9: error: expected declaration or statement at end of input
